HHH-18231 Move listing of persistence.xml files out of PersistenceXmlParser