@@ -61,32 +61,14 @@ public class DuplicatePersistenceUnitNameTest extends BaseUnitTestCase {
 
 	@Test
 	public void testDuplicatePersistenceUnitNameLogAWarnMessage() {
-		final Map<String, Object> properties = new HashMap<String, Object>();
-		properties.put( AvailableSettings.CLASSLOADERS, Arrays.asList( new TestClassLoader() ) );
-		PersistenceXmlParser.create( properties ).locatePersistenceUnits();
+		PersistenceXmlParser.create().parse( List.of(
+				findAsResource(
+						"org/hibernate/jpa/test/persistenceunit/META-INF/persistence.xml"
+				),
+				findAsResource(
+						"org/hibernate/jpa/test/persistenceunit/META-INF/persistenceUnitForNameDuplicationTest.xml"
+				)
+		) );
 		assertTrue( "The warn HHH015018 has not been logged ", triggerable.wasTriggered() );
-	}
-
-	private static class TestClassLoader extends ClassLoader {
-		final List<URL> urls;
-
-		public TestClassLoader() {
-			urls = Arrays.asList(
-				findAsResource(
-					"org/hibernate/jpa/test/persistenceunit/META-INF/persistence.xml"
-				)
-				,
-				findAsResource(
-					"org/hibernate/jpa/test/persistenceunit/META-INF/persistenceUnitForNameDuplicationTest.xml"
-				)
-			);
-		}
-
-		@Override
-		protected Enumeration<URL> findResources(String name) throws IOException {
-			return name.equals( "META-INF/persistence.xml" ) ?
-					Collections.enumeration( urls ) :
-					Collections.emptyEnumeration();
-		}
 	}
 }
